MAT-6902 refactor human readable for qdm measures